# ai-chatbot

./: .env.example  .gitignore  AGENT_EXECUTION_FLOW.md  CLAUDE.md  DATABASE.md  MESSAGE_FLOW_DOCUMENTATION.md  README.md  middleware.ts  package.json  pnpm-lock.yaml  test-auth.js  tsconfig.tsbuildinfo
app/: layout.tsx
components/: agent-marketplace.tsx  app-sidebar.tsx  artifact-messages.tsx  artifact.tsx  canvas-flow.tsx  chat-header.tsx  chat.tsx  create-artifact.tsx  data-stream-handler.tsx  data-stream-provider.tsx  document-preview.tsx  document-skeleton.tsx  document.tsx  greeting.tsx  icons.tsx  message-actions.tsx  message-editor.tsx  message.tsx  messages.tsx  model-selector.tsx  multimodal-input.tsx  page-header.tsx  session-provider.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  sign-out-form.tsx  stack-provider.tsx  suggested-actions.tsx  task-collector.tsx  toolbar.tsx
docs/: AUTH.md  CANVAS_ARTIFACT_REFACTOR_PRD.md  CANVAS_COMPONENT_REFACTOR.md  CANVAS_FINAL_FIX.md  CANVAS_FINAL_WORKING_SOLUTION.md  CANVAS_FLOW_DIAGRAMS.md  CANVAS_REFACTOR_SUMMARY.md  CANVAS_REOPENING_FIX.md  CANVAS_SYSTEM_OVERVIEW.md  DATABASE.md  ID_MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_FLOW_DOCUMENTATION.md  MINIMAL_A2A_IMPLEMENTATION.md  PRD-MCP-server-integration.md  PRD-integrate-authjs-drizzle-adapter.md  PRD-migrate-to-neon-auth-with-stack.md  (+9 more)
python-agent/: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
python-agent/canvas_agent/: __init__.py  __main__.py  agent_executor.py
python-agent/task_agent/: __init__.py  __main__.py  agent_executor.py  agent_launcher.py  analyzer_agent.py  client.py  client_customized_executor.py  common.py  host_agent.py  market_analysis_agent.py  orchestrator_client.py  orchestrator_executor.py  run.sh  trending_agent.py
python-agent/task_agent/market_analyst_agent/: .gitignore  interface.py  main.py  manager.py  market_agent.py  stockstats_utils.py  writer_agent.py
(+91 files in other folders)
