[project]
name = "canvas-agent"
version = "0.1.0"
description = "A2A agent for chatbot canvas integration"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "uvicorn>=0.32.1",
]

[project.scripts]
canvas-agent = "canvas_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvas_agent"]